--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> 
+  <head>
     <meta charset="UTF-8" />
-    <title>Personal Webpage</title>
+    <title>Personal Website</title>
   </head>
-  
-  <body></body>
+
+  <body>
+    <h1>Welcome to my personal website</h1>
+  </body>
 </html>
