h2 and paragraph implemented

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 
   <body>
     <h1>Welcome to my personal website</h1>
+    <h2>Thank you for coming!</h2>
+    <p>My name is Ramith Rajan and I am currently a student at BCIT! I <em>love</em> the classes that I am currently taking. The one thing I would like to see more of here is some cheaper coffee stores. There is a Tim Horton's on the same block as the school but the people there are <strong>super scary</strong>.</p>
   </body>
 </html>
