course list implemented

--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
     <h1>Welcome to my personal website</h1>
     <h2>Thank you for coming!</h2>
     <p>My name is Ramith Rajan and I am currently a student at BCIT! I <em>love</em> the classes that I am currently taking. The one thing I would like to see more of here is some cheaper coffee stores. There is a Tim Horton's on the same block as the school but the people there are <strong>super scary</strong>.</p>
-  </body>
+    <p>The courses that I am taking are as follows:</p>
+    <ul>
+        <li>Math 1310</li>
+        <li>Comm 1116</li>
+        <li>ACIT 1620</li>
+        <li>ORGB 1100</li>
+        <li>ACIT 1515</li>
+        <li>ACIT 1630</li>
+        <li>ACIT 1420</li>
+    </ul>
+</body>
 </html>
