--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>My name is Ramith Rajan and I am currently a student at BCIT! I <em>love</em> the classes that I am currently taking. The one thing I would like to see more of here is some cheaper coffee stores. There is a Tim Horton's on the same block as the school but the people there are <strong>super scary</strong>.</p>
     <p>The courses that I am taking are as follows:</p>
     <ul>
-        <li>Math 1310</li>
+        <li><a href="https://www.bcit.ca/outlines/20223048470/">Math 1310</a></li>
         <li>Comm 1116</li>
         <li>ACIT 1620</li>
         <li>ORGB 1100</li>
