--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Personal Website</title>
+    <link rel="stylesheet" href="css/stylesheet.css">
   </head>
 
   <body>
-    <h1>Welcome to my personal website</h1>
+    <header>
+      <h1>Welcome to my personal website</h1>
+    </header>
+    
     <h2>Thank you for coming!</h2>
     <p>My name is Ramith Rajan and I am currently a student at BCIT! I <em>love</em> the classes that I am currently taking. The one thing I would like to see more of here is some cheaper coffee stores. There is a Tim Horton's on the same block as the school but the people there are <strong>super scary</strong>.</p>
     <p>The courses that I am taking are as follows:</p>
