attachs portrait to html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     
     <h2>Thank you for coming!</h2>
-    <p>My name is Ramith Rajan and I am currently a student at BCIT! I <em>love</em> the classes that I am currently taking. The one thing I would like to see more of here is some cheaper coffee stores. There is a Tim Horton's on the same block as the school but the people there are <strong>super scary</strong>.</p>
+    <p><img src="images/my_image.JPG" alt="picture of me" width="302" height="403"></a>My name is Ramith Rajan and I am currently a student at BCIT! I <em>love</em> the classes that I am currently taking. The one thing I would like to see more of here is some cheaper coffee stores. There is a Tim Horton's on the same block as the school but the people there are <strong>super scary</strong>.</p>
     <p>The courses that I am taking are as follows:</p>
     <ul>
         <li><a href="https://www.bcit.ca/outlines/20223048470/">Math 1310</a></li>
