adds links to school and course list, needs to update css

--- a/index.html
+++ b/index.html
@@ -10,12 +10,6 @@
     <main>
     <header>
       <h1>
-        <a href="https://bcit.ca"
-          ><img
-            src="images/bcit_logo.png"
-            alt="bcit logo"
-            width="75"
-            height="68"></a>
             Welcome to my personal website
       </h1>
     </header>
@@ -48,6 +42,12 @@
         <li>ACIT 1420</li>
       </ul>
     </article>
+    <nav class="external_links">
+        <ul>
+          <li><a href="misc/courses.html">My Courses</a></li>
+          <li><a href="misc/school.html">My School</a></li>
+        </ul>
+    </nav>
     </main>
   </body>
 </html>
