lab4 completion (validated and added semantics)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
     <header>
-      <h1>
+      <h1 class="intropgh1">
             Welcome to my personal website
       </h1>
     </header>
