--- a/misc/courses.html
+++ b/misc/courses.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>courses</title>
+    <title>Courses</title>
     <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 <body>
-    <p>The courses that I am taking are as follows:</p>
+    <h1>The courses that <em>I am</em> taking are as follows:</h1>
       <ul>
         <li>
           <a href="https://www.bcit.ca/outlines/20223048470/">Math 1310</a>
