--- a/misc/school.html
+++ b/misc/school.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>school</title>
+    <title>School</title>
     <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 <body>
