adds semantics to all pages and updates intro page header1 to montserrat and updates header and main tags in html files

--- a/misc/courses.html
+++ b/misc/courses.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 <body>
+  <section>
     <h1>The courses that <em>I am</em> taking are as follows:</h1>
       <ul>
         <li>
@@ -18,5 +19,6 @@
         <li>ACIT 1630</li>
         <li>ACIT 1420</li>
       </ul>
+  </section>
 </body>
 </html>
