--- a/misc/school.html
+++ b/misc/school.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 <body>
-    <h1>
+    <aside>
         <a href="https://bcit.ca">
         <img
           src="../images/bcit_logo.png"
@@ -14,6 +14,6 @@
           width="75"
           height="68">
         </a>
-    </h1>
+    </aside>
 </body>
 </html>
