--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <title>Personal Website</title>
     <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
   </head>
   
   <body>
-    <main>
     <header>
       <h1 class="intropgh1">
             Welcome to my personal website
       </h1>
     </header>
+    <main>
+    
 
     <article>
       <h2>Thank you for coming!</h2>
