--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
 
     <article>
       <h2>Thank you for coming!</h2>
+      <a class="image">
       <img
           src="images/my_image.JPG"
           alt="picture of me"
           width="302"
           height="403"
         >
+        </a>
       <p>
         My name is Ramith Rajan and I am currently a student at BCIT! I
         <em>love</em> the classes that I am currently taking. The one thing I
