--- a/index.html
+++ b/index.html
@@ -6,47 +6,50 @@
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
+      rel="stylesheet"
+    >
   </head>
-  
+
   <body>
     <header>
-      <h1 class="intropgh1">
-            Welcome to my personal website
-      </h1>
+      <h1 class="intropgh1">Welcome to my personal website</h1>
       <nav>
         <ul class="external_links">
           <li class="navlink"><a href="misc/courses.html">Courses</a></li>
           <li class="navlink"><a href="misc/school.html">School</a></li>
         </ul>
-    </nav>
+      </nav>
     </header>
-  <main>
-    <article class="mainbody">
-      <h2 class="about">ABOUT ME!</h2>
-      <a class="image">
-      <img
-          src="images/my_image.JPG"
-          alt="picture of me"
-          width="302"
-          height="403"
-        >
+    <main>
+      <article class="mainbody">
+        <h2 class="about">ABOUT ME!</h2>
+        <a class="image">
+          <img
+            src="images/my_image.JPG"
+            alt="picture of me"
+            width="400"
+            height="300"
+          >
         </a>
-      <p class="homepara1">
-        My name is Ramith Rajan and I am currently a student at BCIT! I
-        <em>love</em> the classes that I am currently taking. The one thing I
-        would like to see more of here is some cheaper coffee stores. There is a
-        Tim Horton's on the same block as the school but the people there are
-        <strong>super scary</strong>.
-      </p>
-      <p class="homepara2">
-        After a couple of weeks, I have realized that midterms are much scarier than the people at the Tims. The amount of coffee I had consumed during that week was abysmal. I love coffee, especially when I get the time to make it at home. I love to make coffee for family and friends, especially lattes. I can't do the latte art though, but it still tastes good.
-      </p>
-    </article>
-    
-  </main>
-  <footer>
-    Copyright data
-  </footer>
+        <p class="homepara1">
+          My name is Ramith Rajan and I am currently a student at BCIT! I
+          <em>love</em> the classes that I am currently taking. The one thing I
+          would like to see more of here is some cheaper coffee stores. There is
+          a Tim Horton's on the same block as the school but the people there
+          are <strong>super scary</strong>.
+        </p>
+        <p class="homepara2">
+          After a couple of weeks, I have realized that midterms are much
+          scarier than the people at the Tims. The amount of coffee I had
+          consumed during that week was abysmal. I love coffee, especially when
+          I get the time to make it at home. I love to make coffee for family
+          and friends, especially lattes. I can't do the latte art though, but
+          it still tastes good.
+        </p>
+      </article>
+    </main>
+    <footer>Copyright data</footer>
   </body>
 </html>
