adds styling to courses.html to match with home page

--- a/misc/courses.html
+++ b/misc/courses.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Courses</title>
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 <body>
+  <header>
+    <h1 class="intropgh1">Welcome to my personal website</h1>
+    <nav>
+      <ul class="external_links">
+        <li class="navlink"><a href="../index.html">Home</a></li>
+        <li class="navlink"><a href="misc/school.html">School</a></li>
+      </ul>
+    </nav>
+  </header>
   <section>
-    <h1>The courses that <em>I am</em> taking are as follows:</h1>
+    <h1>The courses that <em>I</em> am taking are as follows:</h1>
       <ul>
         <li>
           <a href="https://www.bcit.ca/outlines/20223048470/">Math 1310</a>
@@ -20,5 +32,6 @@
         <li>ACIT 1420</li>
       </ul>
   </section>
+  <footer>Copyright data</footer>
 </body>
 </html>
