polishes html and css with w3 validator and fixes formatting of courses, school and index html files

--- a/misc/courses.html
+++ b/misc/courses.html
@@ -10,16 +10,16 @@
 </head>
 <body>
   <header>
-    <h1 class="intropgh1">Welcome to my personal website</h1>
+    <h1 class="intropgh1">Courses</h1>
     <nav>
       <ul class="external_links">
         <li class="navlink"><a href="../index.html">Home</a></li>
-        <li class="navlink"><a href="misc/school.html">School</a></li>
+        <li class="navlink"><a href="school.html">School</a></li>
       </ul>
     </nav>
   </header>
   <section>
-    <h1>The courses that <em>I</em> am taking are as follows:</h1>
+    <h2>The courses that <em>I</em> am taking are as follows:</h2>
       <ul>
         <li>
           <a href="https://www.bcit.ca/outlines/20223048470/">Math 1310</a>
