--- a/misc/school.html
+++ b/misc/school.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>School</title>
-    <link rel="stylesheet" href="../css/stylesheet.css">
-</head>
-<body>
-    <aside>
-        <a href="https://bcit.ca">
-        <img
-          src="../images/bcit_logo.png"
-          alt="bcit logo"
-          width="75"
-          height="68">
-        </a>
-    </aside>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>School</title>
+        <link rel="stylesheet" href="../css/stylesheet.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    </head>
+    <body>
+        <header>
+            <h1 class="intropgh1">School </h1>
+            <nav>
+                <ul class="external_links">
+                    <li class="navlink"><a href="../index.html">Home</a></li>
+                    <li class="navlink"><a href="courses.html">Courses</a></li>
+                </ul>
+            </nav>
+        </header>
+        <aside>  
+            <h2>My school!</h2> 
+            <a href="https://bcit.ca">
+            <img
+            src="../images/bcit_logo.png"
+            alt="bcit logo"
+            width="75"
+            height="68">
+            </a>
+        </aside>
+        <footer>Copyright data</footer>
+    </body>
 </html>
