--- a/misc/courses.html
+++ b/misc/courses.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Courses</title>
+    <title>My Courses</title>
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,27 +10,52 @@
 </head>
 <body>
   <header>
-    <h1 class="intropgh1">Courses</h1>
+    <h1 class="intropgh1">My Courses</h1>
     <nav>
-      <ul class="external_links">
+      <ul>
         <li class="navlink"><a href="../index.html">Home</a></li>
         <li class="navlink"><a href="school.html">School</a></li>
       </ul>
     </nav>
   </header>
-  <section>
-    <h2>The courses that <em>I</em> am taking are as follows:</h2>
-      <ul>
-        <li>
-          <a href="https://www.bcit.ca/outlines/20223048470/">Math 1310</a>
-        </li>
-        <li>Comm 1116</li>
-        <li>ACIT 1620</li>
-        <li>ORGB 1100</li>
-        <li>ACIT 1515</li>
-        <li>ACIT 1630</li>
-        <li>ACIT 1420</li>
-      </ul>
+<section>
+    <ul>
+      <li>
+        <a href="https://www.bcit.ca/outlines/20223048470/">MATH 1310 - Technical Math for IT</a>
+        <p>Fall 2022</p>
+        <p>This course introduces students to the core mathematical constructs that underlie information technology.</p>
+      </li>
+      <li>
+        <a href="https://www.bcit.ca/outlines/20223048469/">COMM 1116 - Business Communications 1</a>
+        <p>Fall 2022</p>
+        <p>This course will teach you how to be a professional and efficient communicator at work. </p>
+      </li>
+      <li>
+        <a href="https://www.bcit.ca/outlines/20223048467/">ACIT 1620 - Fundamental Web Technologies</a>
+        <p>Fall 2022</p>
+        <p>This course introduces the fundamental principles and techniques for designing and developing effective Web sites.</p>
+      </li>
+      <li>
+        <a href="https://www.bcit.ca/outlines/20223041875/">ORGB 1100 - Organizational Behaviour</a>
+        <p>Fall 2022</p>
+        <p> The course will focus on macro factors such as organizational structure, technology and environment; group factors such as group dynamics, leadership, conflict, change and decision making; and micro or individual factors such as personality, attitudes, perception and motivation.</p>
+      </li>
+      <li>
+        <a href="https://www.bcit.ca/outlines/20223048461/">ACIT 1515 - Scripting for IT</a>
+        <p>Fall 2022</p>
+        <p>The course introduces the fundamental concepts of programming for IT professionals, with a focus on scripting languages that are commonly found in the workplace.</p>
+      </li>
+      <li>
+        <a href="https://www.bcit.ca/outlines/20223048468/">ACIT 1630 - Database Systems</a>
+        <p>Fall 2022</p>
+        <p>This course covers relational and NoSQL database technologies, including basic concepts, relational algebra, enhanced entity-relationship and NoSQL data modeling, functional dependencies and normalization, design methodology, SQL query language (DDL and DML), views, security and transaction management.</p>
+      </li> 
+      <li>
+        <a href="https://www.bcit.ca/outlines/20223048460/">ACIT 1420 - Intro to Systems Admin</a>
+        <p>Fall 2022</p>
+        <p>This course introduces students to the configuration, maintenance, and administration of a Windows laptop computer.</p>
+      </li>
+    </ul>
   </section>
   <footer>Copyright data</footer>
 </body>
