adds responsive design and border changing color to courses.html

--- a/misc/courses.html
+++ b/misc/courses.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    
     <title>My Courses</title>
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -9,12 +11,14 @@
     <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 <body>
-  <header>
-    <h1 class="intropgh1">My Courses</h1>
+  <header class="mainheader">
     <nav>
+    <h1 class="intropgh1">My Courses</h1>
       <ul>
-        <li class="navlink"><a href="../index.html">Home</a></li>
-        <li class="navlink"><a href="school.html">School</a></li>
+        <li><a href="../index.html">Home</a></li>
+      </ul>
+      <ul>
+        <li><a href="school.html">School</a></li>
       </ul>
     </nav>
   </header>
