adds responsively designed headers and footers on all sites

--- a/misc/courses.html
+++ b/misc/courses.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    
     <title>My Courses</title>
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +21,7 @@
       </ul>
     </nav>
   </header>
-<section>
+<main>
     <ul>
       <li>
         <a href="https://www.bcit.ca/outlines/20223048470/">MATH 1310 - Technical Math for IT</a>
@@ -60,7 +59,7 @@
         <p>This course introduces students to the configuration, maintenance, and administration of a Windows laptop computer.</p>
       </li>
     </ul>
-  </section>
+  </main>
   <footer>Copyright data</footer>
 </body>
 </html>
