--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <title>Personal Website</title>
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,14 +12,15 @@
       rel="stylesheet"
     >
   </head>
-
   <body>
-    <header>
-      <h1 class="intropgh1">Welcome to my personal website</h1>
+    <header class="mainheader">
       <nav>
-        <ul class="external_links">
-          <li class="navlink"><a href="misc/courses.html">Courses</a></li>
-          <li class="navlink"><a href="misc/school.html">School</a></li>
+      <h1 class="intropgh1">Welcome to my personal website!</h1>
+        <ul>
+          <li><a href="./misc/courses.html">Courses</a></li>
+        </ul>
+        <ul>
+          <li><a href="./misc/school.html">School</a></li>
         </ul>
       </nav>
     </header>
