--- a/misc/school.html
+++ b/misc/school.html
@@ -2,19 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <title>School</title>
         <link rel="stylesheet" href="../css/stylesheet.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     </head>
     <body>
-        <header>
-            <h1 class="intropgh1">School </h1>
+        <header class="mainheader">
             <nav>
-                <ul class="external_links">
-                    <li class="navlink"><a href="../index.html">Home</a></li>
-                    <li class="navlink"><a href="courses.html">Courses</a></li>
-                </ul>
+            <h1 class="intropgh1">My School</h1>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+            </ul>
+            <ul>
+                <li><a href="courses.html">Courses</a></li>
+            </ul>
             </nav>
         </header>
         <aside>  
