--- a/misc/courses.html
+++ b/misc/courses.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <title>My Courses</title>
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="../css/stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 <body>
+  <script src="../scripts/script.js">alert('hello')</script>
   <header class="mainheader">
     <nav>
     <h1 class="intropgh1">My Courses</h1>
